--- a/categoricals/pyproject.toml
+++ b/categoricals/pyproject.toml
@@ -7,9 +7,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-pandas = "^2.2.0"
+pandas = "^1.5.3"
 scikit-learn = "^1.4.1.post1"
 langdetect = "^1.0.9"
+ppscore = "^1.3.0"
 
 
 [tool.poetry.group.dev.dependencies]
